# super-image

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  duties.py  index.html  macros.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: coverage.ini
contributing/: index.html
coverage/: tmp.html
credits/: index.html
css/: mkdocstrings.css
docs/: credits.md  evaluation.md  macros.py  prediction.md  training.md
docs/models/: a2n.md  awsrn.md  carn.md  edsr.md  msrn.md  pan.md
docs/reference/: cli.md  configuration.md  models.md  trainer.md
evaluation/: index.html
examples/: example_train_awsrn.py  example_train_carn.py  example_train_ddbpn.py  example_train_drln.py  example_train_drn.py  example_train_edsr.py  example_train_han.py  example_train_masa.py  example_train_mdsr.py  example_train_pan.py  example_train_physicssr.py  example_train_rcan.py  example_train_rnan.py  example_train_smsr.py
license/: index.html
models/a2n/: index.html
models/awsrn/: index.html
models/carn/: index.html
models/edsr/: index.html
models/msrn/: index.html
models/pan/: index.html
notebooks/: README.md  Upscale_Images_with_Pretrained_super_image_Models.ipynb
prediction/: index.html
reference/cli/: index.html
reference/configuration/: index.html
reference/models/: index.html
reference/trainer/: index.html
search/: search_index.json
src/: calculate_statistics.py  example_test.py  example_train.py  test.py  testing_datasets.py  train.py  train_datasets.py
src/results/: config.json
src/super_image/: __init__.py  __main__.py  configuration_utils.py  file_utils.py  modeling_utils.py  trainer.py
src/super_image/data/: __init__.py  datasets.py  loader.py  metrics.py
src/super_image/models/: __init__.py
src/super_image/models/a2n/: configuration_a2n.py  modeling_a2n.py
src/super_image/models/awsrn/: modeling_awsrn.py
src/super_image/models/carn/: configuration_carn.py
src/super_image/models/drn/: modeling_drn.py
src/super_image/models/edsr/: configuration_edsr.py  modeling_edsr.py
src/super_image/models/msrn/: configuration_msrn.py  modeling_msrn.py
src/super_image/models/rcan/: configuration_rcan.py
src/super_image/models/rnan/: modeling_rnan.py
src/super_image/utils/: metrics.py
tests/: __init__.py  test_cli.py  test_file_utils.py
training/: index.html
