[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "super-image"
version = "0.2.0"
description = "State-of-the-art image super resolution models for PyTorch."
authors = [{ name = "Eugene Siow", email = "kyo116@gmail.com" }]
requires-python = ">= 3.6.2"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
dependencies = [
    "torch>= 1.9.0",
    "torchvision>= 0.10.0",
    "opencv-python>= 4.5.2.54",
    "h5py>= 3.1.0",
    "tqdm>= 4.61.2",
    "huggingface-hub>= 0.0.13",
]

[project.urls]
Homepage = "https://github.com/eugenesiow/super-image"
Repository = "https://github.com/eugenesiow/super-image"

[project.scripts]
super-image = "super_image.cli:main"

[dependency-groups]
dev = [
    "autoflake>= 1.4",
    "black>= 20.8b1",
    "isort>= 5.7.0",
    "mypy>= 0.812",
    "pytest>= 6.2.2",
    "pytest-cov>= 2.11.1",
    "pytest-randomly>= 3.5.0",
    "pytest-sugar>= 0.9.4",
    "pytest-xdist>= 2.2.0",
    "duty>= 0.6.0",
    "git-changelog>= 0.4.2",
    "httpx>= 0.16.1",
    "jinja2-cli>= 0.7.0",
    "toml>= 0.10.2",
    "darglint>= 1.5.8",
    "flake8-bandit>= 2.1.2",
    "flake8-black>= 0.2.1",
    "flake8-bugbear>= 20.11.1",
    "flake8-builtins>= 1.5.3",
    "flake8-comprehensions>= 3.3.1",
    "flake8-docstrings>= 1.5.0",
    "flake8-pytest-style>= 1.3.0",
    "flake8-string-format>= 0.3.0",
    "flake8-tidy-imports>= 4.2.1",
    "flake8-variables-names>= 0.0.4",
    "pep8-naming>= 0.11.1",
    "wps-light>= 0.15.2",
    "mkdocs>= 1.1.2",
    "mkdocs-coverage>= 0.2.1",
    "mkdocs-macros-plugin>= 0.5.0",
    "mkdocs-material>= 6.2.7",
    "mkdocstrings>= 0.15.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/super_image"]

[tool.hatch.build.targets.wheel]
include = ["src/super_image"]

[tool.hatch.build.targets.wheel.sources]
"src/super_image" = "super_image"

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "super_image"
include_trailing_comma = true
